force-app/main/default/objects/AV_OfficePermission__c/AV_OfficePermission__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado para el permisos de las oficinas</description>
    <label>Permiso Oficina</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permisos Oficinas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>