force-app/main/default/objects/AV_OfficePermission__c/fields/AV_Assigner__c.field-meta.xml
<CustomField>
    <fullName>AV_Assigner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cedente</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.AV_ProfileName__c</field>
            <operation>equals</operation>
            <value>AV_Usuario_CaixaBank</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Permisos_Oficinas</relationshipName>
    <type>Lookup</type>
</CustomField>