force-app/main/default/objects/AV_OfficePermission__c/fields/AV_ContactoUsuarioCedido__c.field-meta.xml
<CustomField>
    <fullName>AV_ContactoUsuarioCedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>permite identificar el usuario al que se ha cedido</description>
    <label>Contacto usuario cedido</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Permisos Oficinas (Contacto usuario cedido)</relationshipLabel>
    <relationshipName>Permisos_Oficinas1</relationshipName>
    <type>Lookup</type>
</CustomField>