force-app/main/default/objects/AV_OfficePermission__c/fields/AV_FinalPermiso__c.field-meta.xml
<CustomField>
    <fullName>AV_FinalPermiso__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Permiso</label>
    <type>Date</type>
</CustomField>