force-app/main/default/objects/AV_OfficePermission__c/fields/AV_GestorPermiso__c.field-meta.xml
<CustomField>
    <fullName>AV_GestorPermiso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gestor permiso</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Permisos_Oficinas</relationshipName>
    <type>Lookup</type>
</CustomField>