force-app/main/default/objects/AV_OfficePermission__c/fields/AV_InicioPermiso__c.field-meta.xml
<CustomField>
    <fullName>AV_InicioPermiso__c</fullName>
    <description>indica la fecha de inicio del permiso</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Inicio permiso</label>
    <type>Date</type>
</CustomField>