force-app/main/default/objects/AV_OfficePermission__c/fields/AV_OficinaCedida__c.field-meta.xml
<CustomField>
    <fullName>AV_OficinaCedida__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oficina Cedida</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Permisos_Oficinas</relationshipName>
    <type>Lookup</type>
</CustomField>