force-app/main/default/objects/AV_OfficePermission__c/fields/AV_UsuarioCedido__c.field-meta.xml
<CustomField>
    <fullName>AV_UsuarioCedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario cedido</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.AV_ProfileName__c</field>
            <operation>equals</operation>
            <value>AV_Usuario_CaixaBank</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Permisos_Oficinas1</relationshipName>
    <type>Lookup</type>
</CustomField>