force-app/main/default/objects/AV_OfficePermission__c/recordTypes/AV_Permiso.recordType-meta.xml
<RecordType>
    <fullName>AV_Permiso</fullName>
    <active>true</active>
    <label>Permiso</label>
</RecordType>